--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,15 @@
 {
     "manifest_version": 3,
-    "name": "Hello Extensions",
+    "name": "Easy LSH",
     "description": "Base Level Extension",
     "version": "1.0",
+    "icons": {
+        "32": "icons/icon-32.png"
+    },
     "action": {
-    "default_popup": "hello.html",
-    "default_icon": "logo.png"
+    "default_popup": "hello.html"
+    },
+    "chrome_url_overrides" : {
+        "newtab": "easyLSH_newtab"
     }
 }
