Add div to center and stylesheet

--- a/manifest.json
+++ b/manifest.json
@@ -10,6 +10,6 @@
     "default_popup": "hello.html"
     },
     "chrome_url_overrides" : {
-        "newtab": "easyLSH_newtab"
+        "newtab": "easylsh_newtab/index.html"
     }
 }
