--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,13 @@
 {
     "manifest_version": 3,
-    "name": "Easy LSH",
+    "name": "EasyLSH",
     "description": "Base Level Extension",
     "version": "1.0",
     "icons": {
         "32": "icons/icon-32.png"
     },
     "action": {
-    "default_popup": "hello.html"
+    "default_popup": "popup.html"
     },
     "chrome_url_overrides" : {
         "newtab": "easylsh_newtab/index.html"
